# meta-acqf

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml
conf/acquisition/: ei.yaml  mi.yaml  ucb.yaml
conf/model/: dkl_gp.yaml  rbf_gp.yaml
conf/task/: neurips.yaml  reuters.yaml  synthetic.yaml  webkb.yaml
conf/train/: debug.yaml  standard.yaml
data/: webkb_processed.pt
scripts/: preprocess_datasets.py  run_baselines.sh  run_experiments.sh  setup_datasets.sh
src/meta/: __init__.py  acquisition.py  config.py  data.py  environment.py  main.py  policy.py  surrogate.py  trainer.py
src/meta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
